--- a/src/solicitudMonitoria/JefeSeccionBundle/Resources/config/routing.yml
+++ b/src/solicitudMonitoria/JefeSeccionBundle/Resources/config/routing.yml
@@ -22,6 +22,6 @@ solicitud_monitoria_jefe_seccion_estudiante:
     path:     /estudiante/{idEstudiante}
     defaults: { _controller: solicitudMonitoriaJefeSeccionBundle:Default:estudiante }
     
-solicitud_monitoria_jefe_seccion_calificacion_estudiante:
-    path:     /calificacion
+solicitud_monitoria_jefe_seccion_calificar_estudiante:
+    path:     /calificar_monitores
     defaults: { _controller: solicitudMonitoriaJefeSeccionBundle:Default:calificacion }
